--- a/drums.html
+++ b/drums.html
@@ -5,11 +5,8 @@
 </head>
 <body>
 
-<div id="data"></div>
-<div id="hit"></div>
-
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 <script src="node_modules/socket.io/node_modules/socket.io-client/socket.io.js"></script>
-<script src="js/index.js"></script>
+<script src="js/drums.js"></script>
 </body>
 </html>
